--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -18,3 +18,13 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+.blue{
+  color:$blue;
+}
+.orange{
+  color:$orange;
+}
+.red{
+  color:red;
+}
